--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>GeeksforGeeks Registration</title>
+  <title>Ambry Login</title>
 	<link rel="stylesheet"
 		href="style.css">
 </head>
