--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 <body>
 	<div class="main">
     <h1>Ambry Login</h1>
+    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, laudantium delectus nostrum cupiditate qui
+      officiis eveniet eius magnam sed explicabo aliquam quae modi, aperiam accusantium, aliquid dignissimos distinctio!
+      Voluptatum, aliquam.</span>
 		<h3>Enter your login credentials</h3>
 		<form action="">
 			<label for="first">
